INCLUDE(cmake/toolchain.cmake)

PROJECT(IECMODEL C CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

MESSAGE(STATUS "TOOLCHAIN   : $ENV{CROSS_TOOLCHAIN}")
MESSAGE(STATUS "ARCH        : ${ARCH}")
MESSAGE(STATUS "OS          : ${OS}")
MESSAGE(STATUS "INSTALL_DIR : ${INSTALL_PREFIX}")
MESSAGE(STATUS "BUILD_MODE  : ${CMAKE_BUILD_TYPE}")
MESSAGE(STATUS "LINK_TYPE   : $ENV{LINK_TYPE}")

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(demos)

INSTALL(DIRECTORY include/ DESTINATION ${GOXCEED_PATH}/include/iecmodel )
